web/application/views/css/ilios-styles.css
/* ... */
.icon-star:before {
    content: "\e011";
}
.icon-plus:before {
    content: "\e001";
}
.icon-minus:before {
    content: "\e01e";
}
.icon-help:before {
    content: "\e000";
    margin-right: .5em;
}
.icon-info:before {
    content: "\2014";
}
.icon-blocked:before {
    content: "\26d4";
}
.icon-cancel:before {
    content: "\2715";
}
.icon-cancel-2:before {
    content: "\78";
    font-size: .9em;
    margin-right: .5em;
}
.icon-checkmark:before {
    content: "\2714";
    font-size: .9em;
    margin-right: .5em;
}
.icon-plus-2:before {
    content: "\2b";
}
.icon-minus-2:before {
    content: "\2013";
}
.icon-document:before {
    content: "\e006";
}
.icon-file-pdf:before {
    content: "\e005";
}
.icon-file-word:before {
    content: "\e003";
}
.icon-file-excel:before {
    content: "\e004";
}
.icon-file-powerpoint:before {
    content: "\e007";
}
.icon-file-zip:before {
    content: "\e00b";
}
.icon-picture:before {
    content: "\e00c";
}
.icon-film:before {
    content: "\e00d";
}
.icon-graph:before {
    content: "\e00e";
}
.icon-music:before {
    content: "\266b";
}
.icon-microphone:before {
    content: "\e019";
}
.icon-arrow-down:before {
    content: "\25bc";
}
.icon-arrow-up:before {
    content: "\25b2";
}
.icon-arrow-left:before {
    content: "\25c0";
}
.icon-arrow-right:before {
    content: "\25b6";
}
.icon-expand:before {
    content: "\e01a";
}
.icon-location:before {
    content: "\e01b";
}
.icon-clock:before {
    content: "\e01c";
}
.icon-warning:before {
    content: "\2757";
    margin-right: .5em;
    color: #f6b600;
    font-size: .9em;
}
.icon-question:before {
    content: "\3f";
}
.icon-printer:before {
    content: "\e020";
}
.icon-camera:before {
    content: "\e012";
}
.icon-user:before {
    content: "\e014";
}
.icon-users:before {
    content: "\e01d";
}
.icon-add-user:before {
    content: "\e01f";
}
.icon-feed:before {
    content: "\e000";
}

.collapsed_widget, .expanded_widget {
    position:absolute;
    height:14px;
    width:14px;
    padding:0;
    cursor:pointer;
    z-index:2;
}
.collapsed_widget::before, .expanded_widget::before {
    display: block;
    position: absolute;
    top: -.2em;
    font-family: 'ilios-icons';
    font-size: 1.4em;
    font-style: normal;
    speak: none;
    color:#999;
}
.collapsed_widget:hover:before, .expanded_widget:hover:before {
    color:#2284a1;
}
.collapsed_widget::before {
    content: "\25b6";
}
.expanded_widget::before {
    content: "\25bc";
    top: 0;
}

.icon-alone {
  display: inline-block; /* Fix for clickability issue in WebKit */
}
.screen-reader-text {
  position: absolute;
  top: -9999px;
  left: -9999px;
}
.warning {color: #C00;}
.fail {color: #C00;}
.pass {color:#090;}
.override {
    font-weight: bold;
}

.toggle {
    position: absolute;
    color: #666;
}
.toggle:hover {color: #444;}
.level-1 .toggle {
    padding: 3px;
    width: 2.5em;
    line-height: 2.5em;
    font-size: .9em;
}
.level-1 .toggle a,
.level-1 .toggle span {
    color: #666;
    display:block;
    margin-left: .25em;
}
.level-1 .toggle a:hover {
    color: #444;
}
.expanded > .hd > .toggle:before,
.collapsed> .hd > .toggle:before {
    font-family: 'ilios-icons';
    font-style: normal;
    speak: none;
    float: left;
    font-size: .9em;
    line-height: 2.5em;
    margin-left: .5em;
}
.collapsed > .hd > .toggle:before {
        content: "\e001";

}
.expanded > .hd > .toggle:before {
    content: "\e01e";
}
/*ideally we would do this programmatically, but...*/
#cohort_form .level-1 .toggle {
    display:none;
}
/********************************/
/*Publish status markers        */
/*uses ilios icon font          */
.status {
    white-space: nowrap;
}
.status:before {
    margin: 0 .5em;
    padding: .25em;
    font-size: 1.2em;
    color: #FFF;
    -webkit-border-radius: 4px;
       -moz-border-radius: 4px;
         -o-border-radius: 4px;
            border-radius: 4px;
}
.is-published:before {
    content: "\2714";
    background-color: #618B0F;
}
.is-published-tbd:before, .is-scheduled:before {
    content: "\e01c";
    background-color: #2A60BA;
}

.is-draft:before {
    content: "\2757";
    background-color: #FF9C00;
}

.is-locked:before {
    content: "\e018";
    background-color: #666;
}

/* set the styling for offerings on the calendar that are in draft mode */
.event-in-draft .dhx_body::before,
.event-in-draft.dhx_wa_ev_body::before,
.event-in-draft.dhx_cal_event_clear::before {
    background-color: #FFF;
    color: #FF9C00;
    content: "\2757";
    font-family: 'ilios-icons';
    font-style: normal;
    margin-right: .2em;
    speak: none;
}

.event-in-draft .dhx_body,
.event-in-draft.dhx_wa_ev_body,
.event-in-draft.dhx_cal_event_clear {
    border: dashed 1px #FDD403;
    font-style: italic;
}

/********************************/
/*Some useful global styles     */

h3 span, h4 span {font-weight: normal;}

form.inline-form {
    display: inline;
}

fieldset {
    border: 1px solid #CCC;
    padding:.5em .5em 1em;
    position: relative;
}

legend {
    padding: .25em .5em;
    font-weight: bold;
    font-size: .9em;
}

.shadow {
    -webkit-box-shadow:0 .1em .3em rgba(0,0,0,.3);
    -moz-box-shadow:0 .1em .3em rgba(0,0,0,.3);
    -o-box-shadow:0 .1em .3em rgba(0,0,0,.3);
    box-shadow:0 .1em .3em rgba(0,0,0,.3);
}

/* simple tabs based on UL */
.tabs {
    display:block;
    margin:0 auto;
    min-width: 40em;
}

.tabs > li {
    display:block;
    float:left;
    overflow:hidden;
    background-color:#DDD;
    margin-right:2px;
}

.tabs > li {
    -webkit-border-top-right-radius:5px;
    -webkit-border-top-left-radius:5px;
    -moz-border-radius-topright:5px;
    -moz-border-radius-topleft:5px;
    border-top-right-radius:5px;
    border-top-left-radius:5px;
    -webkit-box-shadow:.1em -.1em .1em rgba(0,0,0,.3);
    -moz-box-shadow:.1em -.1em .1em rgba(0,0,0,.3);
    -o-box-shadow:.1em -.1em .1em rgba(0,0,0,.3);
    box-shadow:.1em -.1em .1em rgba(0,0,0,.3);
}
/* ... */

